# jstock

./: .gitignore  AGENTS.md  README.md  jstock  pyproject.toml  stock_cli.py
.pi/skills/: jstock.md
cli/: __main__.py
jstock/: __init__.py  config.py  model_db.py  models.py  stock_api.py  stock_db.py  stock_positions.py  stock_ths.py  stock_xq.py
skills/: jstock.md
skills/jstock/: SKILL.md
stock/: __init__.py  models.py  stock_api.py  stock_ths.py  stock_xq.py
stock/tests/: test_xq.py
tests/: test_api.py  test_db.py  test_me.py  test_ths.py  test_xq.py
